--- a/index.html
+++ b/index.html
@@ -61,12 +61,7 @@
   </section>
 
   <section id="testimonial">
-    <div class="container">
-      <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi saepe corporis fugit ab adipisci sed quod cum
-        esse explicabo. Distinctio, fuga placeat nemo incidunt provident qui obcaecati neque odio odit.</p>
-        <p class="customer">- John Doe</p> -->
-
-
+    <div class="container"> 
       <blockquote class="blockquote text-center">
         <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quaerat sunt cumque amet,
           maiores illum quia suscipit, magnam enim, sint totam ipsa doloribus? Perspiciatis rerum officia consequatur
@@ -178,7 +173,7 @@
     delay:2000,
     origin: 'bottom'
   });
-  sr.reveal('#testimonial div',{
+  sr.reveal('#testimonial',{
     duration:2000, 
     origin: 'bottom',
   });
